# ManagerViewer

./: CMakeLists.txt  changelog.md  mod.json
.github/workflows/: build.yml
src/: ModuleManager.cpp  ModuleManager.hpp  main.cpp
